[Core] Added Struct